--- a/ProgrammingAssignment1.html
+++ b/ProgrammingAssignment1.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<h3>Draw a 2D picture using JavaScript</h3>
-	<button>
+	<button id="trigger"> Click to Show A 2D Picture </button>
+	<button id="cleaner"> Click to Clean the Drawing </button>
+	</br>
 	<canvas id="myCanvas"
 	 width="1000"
 	 height="500">
@@ -13,34 +15,42 @@
 </body>
 </html>
 <script type="text/javascript">
+	var drawed=false;
 	var canvas=document.getElementById('myCanvas');
 	var context=canvas.getContext('2d');
-	context.lineWidth = 5;
-	context.fillStyle="blue";
-	context.strokeStyle = "red";
-	context.beginPath();
-	context.moveTo(50,50);
-	context.lineTo(100,100);
-	context.stroke();
-	context.closePath();
-	context.beginPath();
-	context.arc(500,300,60,0,2*Math.PI);
-	context.fill();
-	context.font="30px Arial";
-	context.fillText("Hello World!",10,500);
-
-	setTimeout(function(){
-		context.width=context.width;
-		var gradient=context.createLinearGradient(0,0,200,0);
-		gradient.addColorStop(0,"red");
-		gradient.addColorStop(1,"white");
-		context.fillStyle=gradient;
-		context.fillRect(300,10,150,80);
-		var gradientCir = context.createRadialGradient(300,300,5,90,60,100);
-		gradientCir.addColorStop(0,"red");
-		gradientCir.addColorStop(1,"white");
-		context.fillStyle = gradientCir;
-		context.fillRect(300,80,150,80);
-	}, 3000)
-
+	document.getElementById('cleaner').onclick=function(){
+		canvas.width=canvas.width;
+		drawed=false;
+	}
+	document.getElementById('trigger').onclick=function(){
+		if(!drawed){
+			context.lineWidth = 5;
+			context.fillStyle="blue";
+			context.strokeStyle = "red";
+			context.beginPath();
+			context.moveTo(50,50);
+			context.lineTo(100,100);
+			context.stroke();
+			context.closePath();
+			context.beginPath();
+			context.arc(500,300,60,0,2*Math.PI);
+			context.fill();
+			context.font="30px Arial";
+			context.fillText("Hello World!",10,500);
+			setTimeout(function(){
+				canvas.width=canvas.width;
+				var gradient=context.createLinearGradient(0,0,200,0);
+				gradient.addColorStop(0,"red");
+				gradient.addColorStop(1,"white");
+				context.fillStyle=gradient;
+				context.fillRect(300,10,150,80);
+				var gradientCir = context.createRadialGradient(300,300,5,90,60,100);
+				gradientCir.addColorStop(0,"red");
+				gradientCir.addColorStop(1,"white");
+				context.fillStyle = gradientCir;
+				context.fillRect(300,80,150,80);
+			}, 2000)
+			drawed=true;
+		};
+	};
 </script>
