--- a/ProgrammingAssignment1.html
+++ b/ProgrammingAssignment1.html
@@ -70,14 +70,22 @@
       context.lineTo(x-=10*scale,y);
       context.lineTo(x,y-=40*scale);
 			context.fill();
-      context.beginPath();
-      context.moveTo(x+=31*scale,y);
+			context.beginPath();
+			context.moveTo(x+=31*scale,y);
       context.lineTo(x,y+=40*scale);
       context.lineTo(x-=10*scale,y);
       context.lineTo(x,y-=40*scale);
 			context.fill();
       context.beginPath();
-      context.moveTo(x+=31*scale,y);
+			context.moveTo(x+=12*scale,y);
+      context.lineTo(x,y+=15*scale,y);
+      context.lineTo(x-=1*scale,y+=2*scale);
+      context.lineTo(x-=11*scale,y+=35*scale);
+      context.lineTo(x-=7*scale,y+=4*scale);
+			context.lineTo(x,y+=-50*scale);
+			context.fill();
+      context.beginPath();
+      context.moveTo(x+=38*scale,y-=6*scale);
       context.lineTo(x,y+=15*scale);
       context.lineTo(x-=1*scale,y+=2*scale);
       context.lineTo(x-=11*scale,y+=35*scale);
