--- a/Assignment2.html
+++ b/Assignment2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h2>X:yellow Y:green Z:blue</h2>
+
+    <br/>
     <canvas id="myCanvas" height="600" width="600">
     </canvas>
 
@@ -8,7 +11,6 @@
     scale: <input id="scaleSlider" type="range" min="0.2" max="1.4" step="0.01"/>
     speed: <input id="speedSlider" type="range" min="0" max="4" step="0.01"/>
     rotation yz: <input id="xSlider" type="range" min="0" max="360" step="4"/>
-    rotation xz: <input id="ySlider" type="range" min="0" max="360" step="4"/>
     rotation xy: <input id="zSlider" type="range" min="0" max="360" step="4"/>
   </body>
   <head>
@@ -25,8 +27,6 @@ var speedSlider = document.getElementById("speedSlider");
 speedSlider.value = 1;
 var xSlider=document.getElementById("xSlider");
 xSlider.value = 180;
-var ySlider=document.getElementById("ySlider");
-ySlider.value = 180;
 var zSlider=document.getElementById("zSlider");
 zSlider.value = 45;
 
@@ -38,12 +38,13 @@ function drawLine(x1,y1,x2,y2,color,width){
   context.lineTo(x2,y2);
   context.stroke();
 };
-function Box(scale,speed,color){
+function Box(speed,color){
   this.size = 400;
-  this.scale = scale || 1;
   this.color = color || "blue";
   this.angle = 0;
   this.speed = speed || 1;
+  this.scale = 1;
+  this.rota = Math.PI/4;
 };
 Box.prototype.draw = function(){
   context.fillStyle=this.color;
@@ -87,16 +88,14 @@ Box.prototype.draw = function(){
 };
 Box.prototype.update = function(){
   this.angle = (this.angle + Math.PI * 0.005 * this.speed) % (2*Math.PI);
-  this.scale;
 }
 window.onload = function start(){
-  canvas.width=canvas.width;
-  var box=new Box(scaleSlider.value,speedSlider.value,"red");
-  context.translate(300,300);
-  context.rotate(zSlider.value*2*Math.PI/360);
-  context.scale(box.scale,box.scale);
+  var box=new Box(speedSlider.value,"red");
   function draw(){
-    context.clearRect(-box.size*2,-box.size*2,box.size*4,box.size*4);
+    canvas.width=canvas.width;
+    context.translate(300,300);
+    context.rotate(zSlider.value*2*Math.PI/360);
+    context.scale(box.scale,box.scale);
     context.fillStyle="blue";
     context.save();
     drawLine(0,400,0,-400,"green","3"); //draw the rotation axis
@@ -132,9 +131,18 @@ window.onload = function start(){
     context.restore();
     window.requestAnimationFrame(draw);
   };
-  scaleSlider.addEventListener("input",start);
-  speedSlider.addEventListener("input",start);
-  zSlider.addEventListener("input",start);
+  function updateSpeed(){
+    box.speed=speedSlider.value;
+  }
+  function updateScale(){
+    box.scale=scaleSlider.value;
+  }
+  function updateAngle(){
+    box.rota=zSlider.value;
+  }
+  scaleSlider.addEventListener("input",updateScale);
+  speedSlider.addEventListener("input",updateSpeed);
+  zSlider.addEventListener("input",updateAngle);
   draw();
 }
 </script>
