--- a/ProgrammingAssignment3/ProgrammingAssignment3.html
+++ b/ProgrammingAssignment3/ProgrammingAssignment3.html
@@ -5,18 +5,22 @@
     <script src="http://graphics.cs.wisc.edu/JS/twgl-full.min.js"></script>
   </head>
   <body>
-    <div style="float:left"><canvas id="canvas" height="700" width="1000">
+    <div style="float:left; width:70%"><canvas id="canvas" height="900" width="1000">
     </canvas></div>
 
-    <div>
-      <div><h3>Rotate By X Axis</h3><input id="slider1" type="range" min="0" max="100" />
-      <div><h3>Vision Level</h3><input id="slider3" class="vertical-range" type="range" min="-100" max="100" />
-      <div><h3>Density of the skeleton</h3><input id="slider4" type="range" min="10" max="30" /></div>
-      <div><button id="button" onclick="toggle();">Toggle Orthographic / Perspective</button></div>
-      <div><h3>Turn off motion 1</h3><input id="bool1" type="checkbox"/>
-      <div><h3>Turn off motion 2</h3><input id="bool2" type="checkbox"/>
-      <div><h3>Change the motion speed</h3><input id="slider2" type="range" min="0.5" max="4" step="0.05" />
-      <div><h3>Hide Axis</h3><input id="bool3" type="checkbox"/>
+    <div style="float:left; width:15%">
+      <div><h3>Rotate By Z Axis</h3><input id="slider1" type="range" min="-50" max="50" /></div>
+      <div><h3>Vision Level</h3><input id="slider3" class="vertical-range" type="range" min="-100" max="100" /></div>
+      <div><h3>Numbers of objects</h3><input id="slider5" type="range" min="1" max="4"/></div>
+    </div>
+
+    <div style="float:left; width:15%">
+        <div><h3>Skeleton Density</h3><input id="slider4" type="range" min="10" max="20" /></div>
+        <div><button id="button" onclick="toggle();">Toggle Ortho/Persp</button></div>
+        <div><h3>Motion speed</h3><input id="slider2" type="range" min="0.5" max="4" step="0.05" /></div>
+        <div><h3>Turn off motion 1</h3><input id="bool1" type="checkbox"/></div>
+        <div><h3>Turn off motion 2</h3><input id="bool2" type="checkbox"/></div>
+        <div><h3>Hide Axis</h3><input id="bool3" type="checkbox"/></div>
     </div>
   </body>
 </html>
@@ -39,6 +43,8 @@
   slider3.value = 100;
   var slider4 = document.getElementById('slider4');
   slider4.value = 15;
+  var slider5 = document.getElementById('slider5');
+  slider5.value = 2;
   var bool1 = document.getElementById('bool1');
   var bool2 = document.getElementById('bool2');
   var bool3 = document.getElementById('bool3');
@@ -72,7 +78,8 @@
     }
     context.stroke();
   }
-  function drawShape(r1,r2,ag,Tx,n,turnVert,turnHori){
+  function drawShape(r1,r2,ag,Tx,n,turnVert,turnHori,count){
+    count--;
     ag =- ag;
     var angleD = Math.PI*2/n;
     for(var i = 0 ; i <= n ; i ++){
@@ -93,16 +100,49 @@
       var TempTx = m4.multiply(m4.axisRotation(axis3,ag2+i*angleD),Tx);
       drawSkeleton2(r1,r2,TempTx);
     }
+    if(count>0){
+      drawShapeRec(r1,r2,ag,Tx,n,turnVert,turnHori,count)
+    }
   }
+  function drawShapeRec(r1,r2,ag,Tx,n,turnVert,turnHori,count){
+    count--;
+    var Tmodel = m4.multiply(m4.multiply(m4.axisRotation(axis2,Math.PI/2),m4.multiply(m4.scaling([0.3,0.3,0.3]),m4.translation([0,r1,0]))),Tx);
+    var Tanimation = m4.multiply(m4.translation([(r1+r2)*Math.sin(ag*3)*2.25,(r1+r2)*Math.cos(ag*3)*2.25,0]),Tmodel);
+    ag =- ag*3;
+    var angleD = Math.PI*2/n;
+    for(var i = 0 ; i <= n ; i ++){
+      var ag1, ag2;
+      if(turnVert){
+        ag1 = ag;
+      }
+      else {
+        ag1 = 0;
+      }
+      if(turnHori){
+        ag2 = ag;
+      }
+      else{
+        ag2 = 0;
+      }
+      drawSkeleton1(r1,r2,(ag1+i*angleD),Tanimation);
+      var TempTx = m4.multiply(m4.axisRotation(axis3,ag2+i*angleD),Tanimation);
+      drawSkeleton2(r1,r2,TempTx);
+    }
+    if(count>0){
+      drawShapeRec(r1,r2,ag,Tanimation,n,turnVert,turnHori,count);
+    }
+  }
+
+
   function drawAxes(Tx){
     moveToTx(0,0,0,Tx);
-    lineToTx(1000,0,0,Tx);
+    lineToTx(500,0,0,Tx);
     context.stroke();
     moveToTx(0,0,0,Tx);
-    lineToTx(0,1000,0,Tx);
+    lineToTx(0,500,0,Tx);
     context.stroke();
     moveToTx(0,0,0,Tx);
-    lineToTx(0,0,1000,Tx);
+    lineToTx(0,0,500,Tx);
     context.stroke();
   }
 
@@ -118,12 +158,12 @@
     var turnVert = !bool1.checked;
     var turnHori = !bool2.checked;
     var HideAxis = bool3.checked;
-
+    var numberOO = slider5.value;
     var eye = [800,800,800*Math.cos(level)];
     var target = [0,0,0];
     var up = [0,0,1];
 
-    var Tmodel = m4.axisRotation(axis1,angle1);
+    var Tmodel = m4.axisRotation(axis3,angle1);
     var Tcamera = m4.inverse(m4.lookAt(eye,target,up));
     var Tprojection;
     if(persp){
@@ -132,13 +172,13 @@
     else {
       Tprojection=m4.ortho(-250,250,-200,300,-2,2);
     }
-    var Tviewport = m4.multiply(m4.scaling([200,200,200]),m4.translation([500,-350,0]));
-    var Tcpv = m4.multiply(m4.multiply(Tcamera,Tprojection),Tviewport);
-    var Tmcpv = m4.multiply(Tmodel,Tcpv);
+    var Tviewport = m4.multiply(m4.scaling([180,180,180]),m4.translation([500,-350,0]));
+    var Tmcpv = m4.multiply(Tmodel,m4.multiply(m4.multiply(Tcamera,Tprojection),Tviewport));
     if(!HideAxis){
-      drawAxes(Tcpv);
+      drawAxes(Tmcpv);
     }
-    drawShape(200,100,ag,Tmcpv,n,turnVert,turnHori);
+    drawShape(200,100,ag,Tmcpv,n,turnVert,turnHori,numberOO);
+
     update();
     window.requestAnimationFrame(draw);
   }
