--- a/ProgrammingAssignment3/ProgrammingAssignment3.html
+++ b/ProgrammingAssignment3/ProgrammingAssignment3.html
@@ -35,24 +35,24 @@
   var context=canvas.getContext('2d');
   var m4=twgl.m4;
 
-  var slider1 = document.getElementById('slider1');
+  var slider1 = document.getElementById('slider1');     //value for rotation around Z axis
   slider1.value = -10;
-  var slider2 = document.getElementById('slider2');
+  var slider2 = document.getElementById('slider2');     //speed
   slider2.value = 2;
-  var slider3 = document.getElementById('slider3');
+  var slider3 = document.getElementById('slider3');     //vertical vision level
   slider3.value = 100;
-  var slider4 = document.getElementById('slider4');
+  var slider4 = document.getElementById('slider4');     //skeleton density
   slider4.value = 10;
-  var slider5 = document.getElementById('slider5');
+  var slider5 = document.getElementById('slider5');     //number of object
   slider5.value = 4;
-  var bool1 = document.getElementById('bool1');
-  var bool2 = document.getElementById('bool2');
-  var bool3 = document.getElementById('bool3');
-  var persp = true;
-  var axis1 = [1,0,0];
-  var axis2 = [0,1,0];
-  var axis3 = [0,0,1];
-  var ag = 0;
+  var bool1 = document.getElementById('bool1');         //turn off motion 1
+  var bool2 = document.getElementById('bool2');         //turn off motion 2
+  var bool3 = document.getElementById('bool3');         //hide axes
+  var persp = true;                                     //boolean for toggle between ortho/persp
+  var axis1 = [1,0,0];                                  // x axis
+  var axis2 = [0,1,0];                                  // y axis
+  var axis3 = [0,0,1];                                  // z axis
+  var ag = 0;                                           //angle for animation
 
   function moveToTx(x,y,z,Tx){
     var location = [x,y,z];
@@ -65,6 +65,7 @@
     context.lineTo(locationTx[0],-locationTx[1]);
   }
 
+  // draw horizontal skeleton (horizontal circle)
   function drawSkeleton1(r1,r2,ag,Tx){
     moveToTx(r1-Math.cos(ag)*r2,0,r2*Math.sin(ag),Tx);
     for(var j=Math.PI/32;j<2.001*Math.PI;j+=Math.PI/32){
@@ -74,6 +75,7 @@
     }
     context.stroke();
   }
+  //draw vertical skeleton (vertical circle)
   function drawSkeleton2(r1,r2,Tx){
     moveToTx((r1-r2),0,0,Tx);
     for(var j=Math.PI/32;j<2.001*Math.PI;j+=Math.PI/32){
@@ -82,10 +84,12 @@
     }
     context.stroke();
   }
+  //draw the whole skeleton and its children recursively
   function drawShape(r1,r2,ag,Tx,n,turnVert,turnHori,count){
     count--;
     ag =- ag;
-    var angleD = Math.PI*2/n;
+    var angleD = Math.PI*2/n;   //angle between single skeletons
+    //draw skeleton
     for(var i = 0 ; i <= n ; i ++){
       var ag1, ag2;
       if(turnVert){
@@ -104,13 +108,14 @@
       var TempTx = m4.multiply(m4.axisRotation(axis3,ag2+i*angleD),Tx);
       drawSkeleton2(r1,r2,TempTx);
     }
+    //draw smaller object by recursion
     if(count>0){
       var Tmodel = m4.multiply(m4.multiply(m4.axisRotation(axis2,Math.PI/2),m4.multiply(m4.scaling([0.3,0.3,0.3]),m4.translation([0,r1,0]))),Tx);
       var Tx = m4.multiply(m4.translation([(r1+r2)*Math.sin(ag*3)*2.25,(r1+r2)*Math.cos(ag*3)*2.25,0]),Tmodel);
       drawShape(r1,r2,3*ag,Tx,n,turnVert,turnHori,count)
     }
   }
-
+  //draw x,y,z axes
   function drawAxes(Tx){
     moveToTx(0,0,0,Tx);
     lineToTx(500,0,0,Tx);
@@ -122,16 +127,17 @@
     lineToTx(0,0,500,Tx);
     context.stroke();
   }
-
+  //draw picture
   function draw() {
     canvas.width=canvas.width;
-    var n = document.getElementById("slider4").value;
-    var angle1 = slider1.value*0.02*Math.PI;
-    var level = (slider3.value-100)*0.005*Math.PI;
-    var turnVert = !bool1.checked;
-    var turnHori = !bool2.checked;
-    var HideAxis = bool3.checked;
-    var numberOO = slider5.value;
+    var n = document.getElementById("slider4").value;   //density
+    var angle1 = slider1.value*0.02*Math.PI;            //rotation angle
+    var level = (slider3.value-100)*0.005*Math.PI;      //vision level
+    var turnVert = !bool1.checked;                      //motion 1
+    var turnHori = !bool2.checked;                      //motion 2
+    var HideAxes = bool3.checked;                       //hide axis
+    var numberOO = slider5.value;                       //number of object
+
     var eye = [800,800,800*Math.cos(level)];
     var target = [0,0,0];
     var up = [0,0,1];
@@ -139,6 +145,7 @@
     var Tmodel = m4.axisRotation(axis3,angle1);
     var Tcamera = m4.inverse(m4.lookAt(eye,target,up));
     var Tprojection;
+    //toggle feature
     if(persp){
       Tprojection=m4.perspective(Math.PI/8,1,3,400);
     }
@@ -147,16 +154,17 @@
     }
     var Tviewport = m4.multiply(m4.scaling([180,180,180]),m4.translation([500,-350,0]));
     var Tmcpv = m4.multiply(Tmodel,m4.multiply(m4.multiply(Tcamera,Tprojection),Tviewport));
-    if(!HideAxis){
+    //hide axes
+    if(!HideAxes){
       drawAxes(Tmcpv);
     }
     drawShape(200,100,ag,Tmcpv,n,turnVert,turnHori,numberOO);
     update();
     window.requestAnimationFrame(draw);
   }
+  //update for animation
   function update(){
-    speed = slider2.value;
-    ag = (ag + Math.PI/320*speed) % (Math.PI*2);
+    ag = (ag + Math.PI/320*slider2.value) % (Math.PI*2);  //change in angle for animation (scale with speed)
   }
   function toggle(){
     persp = !persp;
